# Genesis-Humanoid

./: .gitignore  LICENSE  README.md  pyproject.toml
src/env/: pyproject.toml
src/env/gs_env/common/bases/: base_env.py  base_robot.py  base_scene.py  base_sensor.py
src/env/gs_env/common/rewards/: g1_terms.py  leggedrobot_terms.py
src/env/gs_env/common/utils/: asset_utils.py  math_utils.py  motion_utils.py
src/env/gs_env/real/: leggedrobot_env.py  optitrack_env.py
src/env/gs_env/real/config/: registry.py
src/env/gs_env/real/oculus/: OculusClient.py
src/env/gs_env/real/oculus/QuestPoseStreamer/: .gitignore
src/env/gs_env/real/oculus/QuestPoseStreamer/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
src/env/gs_env/real/oculus/QuestPoseStreamer/UserSettings/: AndroidLogcatSettings.asset
src/env/gs_env/real/optitrack/: MoCapData.py  NatNetClient.py  optitrack_config.py
src/env/gs_env/real/steamvr/: SteamVRClient.py
src/env/gs_env/real/steamvr/SteamVRPoseStreamer/: .gitignore  Program.cs  README.md  SteamVRPoseStreamer.csproj
src/env/gs_env/real/unitree/utils/: low_state_controller.py  low_state_handler.py
src/env/gs_env/sim/envs/: __init__.py
src/env/gs_env/sim/envs/config/: registry.py  schema.py
src/env/gs_env/sim/envs/locomotion/: leggedrobot_env.py  motion_env.py  walking_env.py
src/env/gs_env/sim/robots/: __init__.py  leggedrobots.py
src/env/gs_env/sim/robots/config/: registry.py  schema.py
src/env/gs_env/sim/scenes/: custom_scene.py  flat_scene.py
src/env/gs_env/sim/scenes/config/: registry.py  schema.py
(+64 files in other folders)
