[project]
name = "gs-env"
version = "0.0.1"
description = "Simulation and real robot environments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fire>=0.7.0",
  "genesis-world ; sys_platform != 'linux' or platform_machine != 'aarch64'",
  "gs-agent",
  "gs-schemas",
  "huggingface-hub>=0.24.7",
  "joblib>=1.5.2",
  "loguru>=0.7.3",
  "mink>=1.0.0",
  "numpy>=2.2.5",
  "openpyxl>=3.1.5",
  "pynput>=1.7.6",
  "scikit-learn>=1.6.0",
  "scipy>=1.11.0",
  "smplx",
  "torch>=2.6.0",
  "transforms3d>=0.4.2",
]

[dependency-groups]
dev = [
  "fire>=0.7.0",
  "pre-commit>=4.3.0",
  "pyright[nodejs]>=1.1.404",
  "pytest-timeout>=2.4.0",
  "pytest>=8.4.1",
  "ruff>=0.12.10",
]

[build-system]
requires = [
  "hatchling",
]
build-backend = "hatchling.build"
